[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/img/sprites/Player/blasto.png" type="Texture" id=1]
[ext_resource path="res://assets/Scripts/Player.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]
resource_name = "attack"
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 13, 11, 14, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "hit"
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 9, 4, 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=4]
resource_name = "move"
length = 0.8
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 6, 8, 7 ]
}

[sub_resource type="Animation" id=5]
resource_name = "shoot"
length = 0.6
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 3, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
} ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 32.0201, 54.2831 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 22.4795, 19.9641 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 32.9226, 46.3473 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
position = Vector2( 102.376, 118.983 )
scale = Vector2( 2.13561, 2.13561 )
script = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 4.17255, 14.4961 )
scale = Vector2( 0.209162, 0.194498 )
texture = ExtResource( 1 )
hframes = 3
vframes = 3
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 1 )
anims/hit = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/move = SubResource( 4 )
anims/shoot = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 10.091 )
shape = SubResource( 6 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 58.461, -5.06458 )

[node name="Pivot" type="Node2D" parent="."]

[node name="AttackCollision" type="Area2D" parent="Pivot"]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/AttackCollision"]
visible = false
position = Vector2( 55.6253, 10.5953 )
shape = SubResource( 7 )

[node name="HitBox" type="Area2D" parent="."]
position = Vector2( 0, 0.662189 )
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
visible = false
position = Vector2( 0, 12.2508 )
shape = SubResource( 8 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="Pivot/AttackCollision" to="." method="_on_AttackCollision_area_entered"]
[connection signal="area_exited" from="Pivot/AttackCollision" to="." method="_on_AttackCollision_area_exited"]
